--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
     <section class="home" id="home">
       <div class="max-width">
         <div class="content-home">
-          <div class="text-hi">Hi, Namaku</div>
+          <div class="text-hi">Hi, My Name</div>
           <div class="text-name">Stefanus Ditta</div>
-          <div class="text-skills">Dan saya adalah seorang <span class="text-typing"></span></div>
+          <div class="text-skills">And I'm a <span class="text-typing"></span></div>
         </div>
       </div>
     </section>
@@ -55,7 +55,7 @@
 
     <!-- footer section start -->
     <footer>
-      <span>Created By <a href="https://www.linkedin.com/in/stefanus-ditta-b94992217" target="blank">Stefanus Ditta</a> | <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
+      <span>Created with <i class="fas fa-heart"></i> <a href="https://www.instagram.com/stefanus_ditta/" target="blank">Stefanus Ditta</a> | <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
     </footer>
     <!-- End Footer -->
     <script type="text/javascript" src="assets/js/script.js"></script>
