--- a/index.html
+++ b/index.html
@@ -4,11 +4,24 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- My CSS -->
     <link rel="stylesheet" href="assets/css/stylesheet.css" />
+
+    <!-- FontAwesome 5 Icon -->
     <script src="https://kit.fontawesome.com/c4d5f288c7.js" crossorigin="anonymous"></script>
+
+    <!-- Animated HTML -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+    <!-- Owl JS -->
     <script src="assets/js/owl.carousel.min.js"></script>
+
+    <!-- Typed JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
-    <title>Portofolio Stefanus Ditta</title>
+
+    <title>Portfolio || Stefanus Ditta</title>
   </head>
   <body>
     <!-- Start Navbar -->
@@ -45,17 +58,32 @@
     <!-- End Home -->
 
     <!-- Start About -->
+    <section id="about" class="about">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <h2>About Me</h2>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- End About -->
 
-    <!-- Start School -->
-    <!-- End School -->
+    <!-- Start study -->
+    <section id="study" class="study"></section>
+    <!-- End study -->
 
     <!-- Start Skills -->
+    <section id="skills" class="skills"></section>
     <!-- End Skilss -->
+
+    <!-- Start Contact -->
+    <section id="contact" class="contact"></section>
+    <!-- End Contact -->
 
     <!-- footer section start -->
     <footer>
-      <span>Created with <i class="fas fa-heart"></i> <a href="https://www.instagram.com/stefanus_ditta/" target="blank">Stefanus Ditta</a> | <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
+      <span>Created with <i class="fas fa-heart"></i> by <a href="https://www.instagram.com/stefanus_ditta/" target="blank">Stefanus Ditta</a> | <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
     </footer>
     <!-- End Footer -->
     <script type="text/javascript" src="assets/js/script.js"></script>
