--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- Typed JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
 
-    <title>Portfolio || Stefanus Ditta</title>
+    <title>Portfolio Stefanus Ditta</title>
   </head>
   <body>
     <!-- Start Navbar -->
@@ -61,24 +61,69 @@
     <section id="about" class="about">
       <div class="container">
         <div class="row">
-          <div class="col">
+          <div class="col" data-aos="fade-up">
             <h2>About Me</h2>
           </div>
         </div>
       </div>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path
+          fill="#ffffff"
+          fill-opacity="1"
+          d="M0,128L24,122.7C48,117,96,107,144,128C192,149,240,203,288,202.7C336,203,384,149,432,154.7C480,160,528,224,576,250.7C624,277,672,267,720,250.7C768,235,816,213,864,213.3C912,213,960,235,1008,213.3C1056,192,1104,128,1152,96C1200,64,1248,64,1296,101.3C1344,139,1392,213,1416,250.7L1440,288L1440,320L1416,320C1392,320,1344,320,1296,320C1248,320,1200,320,1152,320C1104,320,1056,320,1008,320C960,320,912,320,864,320C816,320,768,320,720,320C672,320,624,320,576,320C528,320,480,320,432,320C384,320,336,320,288,320C240,320,192,320,144,320C96,320,48,320,24,320L0,320Z"
+        ></path>
+      </svg>
     </section>
     <!-- End About -->
 
     <!-- Start study -->
-    <section id="study" class="study"></section>
+    <section id="study" class="study">
+      <div class="container">
+        <div class="row">
+          <div class="col" data-aos="fade-up">
+            <h2>Study</h2>
+          </div>
+        </div>
+      </div>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path
+          fill="#dc143c"
+          fill-opacity="1"
+          d="M0,224L24,224C48,224,96,224,144,234.7C192,245,240,267,288,250.7C336,235,384,181,432,160C480,139,528,149,576,165.3C624,181,672,203,720,224C768,245,816,267,864,272C912,277,960,267,1008,256C1056,245,1104,235,1152,202.7C1200,171,1248,117,1296,101.3C1344,85,1392,107,1416,117.3L1440,128L1440,320L1416,320C1392,320,1344,320,1296,320C1248,320,1200,320,1152,320C1104,320,1056,320,1008,320C960,320,912,320,864,320C816,320,768,320,720,320C672,320,624,320,576,320C528,320,480,320,432,320C384,320,336,320,288,320C240,320,192,320,144,320C96,320,48,320,24,320L0,320Z"
+        ></path>
+      </svg>
+    </section>
     <!-- End study -->
 
     <!-- Start Skills -->
-    <section id="skills" class="skills"></section>
+    <section id="skills" class="skills">
+      <div class="container">
+        <div class="row">
+          <div class="col" data-aos="fade-up">
+            <h2>Skills</h2>
+          </div>
+        </div>
+      </div>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path
+          fill="#ffffff"
+          fill-opacity="1"
+          d="M0,192L24,202.7C48,213,96,235,144,229.3C192,224,240,192,288,181.3C336,171,384,181,432,186.7C480,192,528,192,576,202.7C624,213,672,235,720,213.3C768,192,816,128,864,138.7C912,149,960,235,1008,245.3C1056,256,1104,192,1152,165.3C1200,139,1248,149,1296,133.3C1344,117,1392,75,1416,53.3L1440,32L1440,320L1416,320C1392,320,1344,320,1296,320C1248,320,1200,320,1152,320C1104,320,1056,320,1008,320C960,320,912,320,864,320C816,320,768,320,720,320C672,320,624,320,576,320C528,320,480,320,432,320C384,320,336,320,288,320C240,320,192,320,144,320C96,320,48,320,24,320L0,320Z"
+        ></path>
+      </svg>
+    </section>
     <!-- End Skilss -->
 
     <!-- Start Contact -->
-    <section id="contact" class="contact"></section>
+    <section id="contact" class="contact">
+      <div class="container">
+        <div class="row">
+          <div class="col" data-aos="fade-up">
+            <h2>Contact</h2>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- End Contact -->
 
     <!-- footer section start -->
