--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
     <!-- Owl JS -->
-    <script src="assets/js/owl.carousel.min.js"></script>
+    <!-- <script src="assets/js/owl.carousel.min.js"></script> -->
 
     <!-- Typed JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
@@ -132,6 +132,6 @@
     </footer>
     <!-- End Footer -->
     <script type="text/javascript" src="assets/js/script.js"></script>
-    <script type="text/javascript" src="assets/js/script-owl.js"></script>
+    <!-- <script type="text/javascript" src="assets/js/script-owl.js"></script> -->
   </body>
 </html>
